# historic

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  README  THANKS  autogen.sh  boot.mk  cleanup.sh  commit.sh  configure.ac  deps.mk  extensions.mk  external.mk  glusterfs.spec.in  header.mk  kernel.mk  ramdisk.mk  revision.h
auth/: Makefile.am
auth/addr/src/: Makefile.am
booster/src/: Makefile.am
doc/: Makefile.am  gluster.texi  glusterfs-client.vol.sample  introduction  translator-option.txt
doc/examples/: protocol-client.vol  protocol-server.vol
doc/user-guide/: fuse.odg  fuse.txt  user-guide.texi  xlator.odg
extensions/: GlusterEP.gex  GlusterEP.mk  GlusterHPC.gex  GlusterHPC.mk  auth.gex  auth.mk  autologin-pkg.gex  autologin-pkg.mk  bootdisk-manager.gex  bootdisk-manager.mk  bootloader-manager.gex  bootloader-manager.mk  bootp-manager.gex  bootp-manager.mk  c3-pkg.gex  c3-pkg.mk  cerebro-pkg.gex  cerebro-pkg.mk  client-boot.gex  client-boot.mk  client-reg.gex  client-reg.mk  conman-pkg.gex  conman-pkg.mk  debug-utils.gex  debug-utils.mk  freeipmi.gex  freeipmi.mk  fs-utils.gex  fs-utils.mk  ganglia-pkg.gex  ganglia-pkg.mk  genders-pkg.gex  genders-pkg.mk  gutils.gex  gutils.mk  hpc-base-pkg.gex  hpc-base-pkg.mk  ib-utils.gex  ib-utils.mk  (+31 more)
extensions/GlusterEP/: GCapture  GProvision  GlusterEP  Makefile.am  client-init  client-kick-start  runme
extensions/GlusterHPC/: GlusterHPC  Makefile.am  client-init  client-kick-start  ghpc_send  gpkg-sel  postinstall.sh  runme
extensions/auth/: Makefile.am  gmanage-user  runme
extensions/autologin-pkg/: runme
extensions/bootdisk-manager/: Makefile.am
extensions/bootdisk-manager/bootman/: DESC.txt  bootman  do_floppy.py  do_iso.py  do_usb.py  kernel_image.py  mode.py  pxe_image.py  xfer_burn.py
extensions/bootdisk-manager/bootman/template/: kernel-image.tar.bz2  pxe-image.tar.bz2
extensions/bootloader-manager/: Makefile.am  bootloader-manager  runme
extensions/bootp-manager/: Makefile.am  bootp-manager
extensions/c3-pkg/: Makefile.am  c3-master  c3.env  runme
extensions/cerebro-pkg/: Makefile.am  runme
extensions/client-boot/: Makefile.am  runme
extensions/client-reg/: Makefile.am  client-reg
extensions/conman-pkg/: Makefile.am  runme
extensions/debug-utils/: Makefile.am  configure.ac
extensions/ganglia-pkg/: Makefile.am  ganglia-master  ganglia-slave  gmetad.conf  gmetad.init.d.redhat  gmetad.init.d.suse  gmond.conf  gmond.init.d.redhat  gmond.init.d.suse  runme
extensions/genders-pkg/: Makefile.am  configure.ac  runme
extensions/gutils/: Makefile.am  customize-net  gconsole  gdump-netstate  ghosts  ghwdump  ghwprobe  gimage-dump  gimage-sel  gmeta-installer  gmount  gmountmap  gpart  gpart-sel  gpartdump.py  gprobe  grub-convert  gstate-sel  gstream  gumount  runme
extensions/hpc-base-pkg/: Makefile.am  gluster.env  hpc-base-master  hpc-base-slave  profile  runme
extensions/ib-utils/: runme
extensions/iface-cfg/: Makefile.am  ghpc_iface_update  iface-cfg  runme  update
extensions/init/: Makefile.am  runme
extensions/init/Gluster/: GArgs.py  GConf.py  GExtension.py  GIP.py  GIPv4.py  GPackage.py  GRegistry.py  __init__.py  gmap.py
extensions/init/Gluster/GFrontEnd/: UI.py  dialog.py
extensions/init/Gluster/GTmp/: Dir.py  __init__.py
extensions/lam-pkg/: Makefile.am  lam-master  lam-slave  lam.env  runme
extensions/mac-collector/: Makefile.am  collect-macs  mac-collector  runme
extensions/master-boot/: Makefile.am  runme
extensions/mpich2-pkg/: Makefile.am  mpeuninstall  mpicc  mpicc.conf  mpich2-env.sh  mpich2-master  mpich2-slave  mpich2version  mpicxx  mpicxx.conf  mpif77  mpif77.conf  mpif90  mpif90.conf  runme
extensions/mvapich-gen2-pkg/: Makefile  Makefile.am  mpicc  mpichlib.conf  mpicxx  mpireconfig  mpirun  mvapich-gen2-env.sh  mvapich-gen2-slave  runme
extensions/net-utils/: runme
extensions/ofed-pkg/: Makefile.am  autogen.sh  dat.conf  ofed-slave  opensm.conf  opensmd  runme
extensions/openib-pkg/: Makefile.am  runme
extensions/pdsh-pkg/: Makefile.am  runme
extensions/powerman-pkg/: Makefile.am  runme
extensions/self-install/: Makefile.am  menu.lst.in  runme  self-install
extensions/shutdown/: runme
extensions/slurm-pkg/: Makefile.am  autogen.sh  runme  slurm-master  slurm-slave  slurm.cert  slurm.conf.in  slurmctld  slurmd
extensions/torque-pkg/: Makefile.am  pbs_mom.init.d.redhat  pbs_mom.init.d.suse  pbs_sched.init.d.redhat  pbs_sched.init.d.suse  pbs_server  pbs_server.init.d.suse  runme  torque-master  torque-slave
extras/: glusterfs-mode.el
glusterfs-booster/src/: Makefile.am  bridge.c  entry.c
glusterfs-fuse/src/: fetch-spec.c  fuse-bridge.c  fuse-internals.c
glusterfs/src/: Makefile.am  glusterfs.c
glusterfsd/src/: Makefile.am  glusterfsd.c
libglusterfs/: Makefile.am
libglusterfs/src/: Makefile.am  authenticate.c  authenticate.h  common-utils.h  dict.c  inode.c  protocol.c  protocol.h  revision.h  spec.l  spec.y  xlator.c  xlator.h
patches/LVM2.2.02.06/: configure-patch.diff  makefile.diff
patches/Python-2.4.1/: cross-compile.diff
patches/atftp-0.7/: gcc4fix.diff  ln.diff
patches/bash-3.0/: waitpid.diff
patches/busybox-1.00/: config-gluster  warning.diff
patches/bzip2-1.0.3/: ln.diff
ramdisk/: Makefile.am  client-gex  devices.txt  gcsh  gcshd  gping.c  gpingd.c  linuxrc
scheduler/: Makefile.am
scheduler/nufa/src/: Makefile.am  nufa.c
scheduler/random/src/: Makefile.am  random.c
scheduler/rr/src/: Makefile.am  rr.c
transport/: Makefile.am
transport/ib-verbs/server/src/: Makefile.am
transport/ib-verbs/src/: Makefile.am  ib-verbs.c
xlators/: Makefile.am
xlators/bindings/python/src/: Makefile.am  python.c
xlators/cluster/afr/src/: Makefile.am  afr.c  afr_self_heal.c
xlators/features/filter/src/: Makefile.am
xlators/features/fixed-id/src/: Makefile.am
xlators/features/posix-locks/src/: Makefile.am  posix-locks.c  posix.c
xlators/mount/fuse/src/: Makefile.am  fuse-bridge.c
xlators/performance/io-threads/src/: Makefile.am  io-threads.c
xlators/storage/posix/src/: Makefile.am  posix.c
(+160 files in other folders)
