
bootman_DATA = \
	bootman/bootman \
	bootman/do_floppy.py \
	bootman/do_iso.py \
	bootman/do_usb.py \
	bootman/kernel_image.py \
	bootman/pxe_image.py \
	bootman/mode.py \
	bootman/xfer_burn.py 
bootmandir = $(datadir)/gluster/extensions/bootman

bootman_template_DATA = \
	bootman/template/boot-template.img.gz \
	bootman/template/kernel-image.tar.bz2 \
	bootman/template/pxe-image.tar.bz2
bootman_templatedir = $(datadir)/gluster/extensions/bootman/template
