Gluster_DATA = 	Gluster/__init__.py \
		Gluster/GArgs.py \
		Gluster/GConf.py \
		Gluster/GExtension.py \
		Gluster/GIP.py \
		Gluster/GIPv4.py \
		Gluster/GPackage.py \
		Gluster/GRegistry.py \
		Gluster/gmap.py

Glusterdir = $(datadir)/gluster/extensions/lib

GlusterGFrontEnd_DATA = \
		Gluster/GFrontEnd/__init__.py \
		Gluster/GFrontEnd/UI.py \
		Gluster/GFrontEnd/dialog.py

GlusterGFrontEnddir = $(datadir)/gluster/extensions/lib/GFrontEnd

GlusterGTmp_DATA = \
		Gluster/GTmp/__init__.py \
		Gluster/GTmp/Dir.py

GlusterGTmpdir = $(datadir)/gluster/extensions/lib/GTmp

bin_SCRIPTS = bin/gex bin/GDesktop bin/gdsh bin/gdcp 

bin_PROGRAMS = gdscript
gdscript_SOURCES = bin/gdscript.c
