
setup_SCRIPTS = mpich2-slave mpich2-master
setupdir = /opt/gluster/setup

override_bin_SCRIPTS = mpicc mpicxx mpich2version mpif77 mpif90
override_bindir = /opt/gluster/mpich2-1.0.3/bin

override_etc_DATA = mpicc.conf mpicxx.conf mpif77.conf mpif90.conf
override_etcdir = /opt/gluster/mpich2-1.0.3/etc

override_sbin_SCRIPTS = mpeuninstall
override_sbindir = /opt/gluster/mpich2-1.0.3/sbin
