
setup_SCRIPTS = mvapich-gen2-master mvapich-gen2-slave
setupdir = /opt/gluster/setup

override_env_SCRIPTS = mvapich-gen2-env.sh
override_envdir = /opt/gluster/etc/env.d

override_bin_SCRIPTS = mpicc mpicxx mpireconfig mpireconfig.dat mpirun
override_bindir = /opt/gluster/mvapich-gen2-1.0-106/bin

override_etc_SCRIPTS = mpichlib.conf
override_etcdir = /opt/gluster/mvapich-gen2-1.0-106/etc
